--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -43,6 +43,16 @@
     text-align: center;
     color: rgb(180, 180 ,180);
   }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+      text-decoration: underline;
+      font-weight: bold;
+    }
+  }
 }
 
 @media (max-width: 768px) {
