--- a/client/src/components/Note/NewRssFeed.module.scss
+++ b/client/src/components/Note/NewRssFeed.module.scss
@@ -8,7 +8,7 @@
     box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
     color: rgb(80, 80, 80);
   
-    .title, .url, .save {
+    .name, .url, .save {
       display: block;
       width: 100%;
       border: none;
@@ -18,7 +18,7 @@
       text-align: center;
     }
   
-    .title {
+    .name {
       margin: 2% 0;
       padding: 0 4%;
       box-sizing: border-box;
@@ -54,7 +54,7 @@
       width: 100%;
     }
   
-    .title {
+    .name {
       font-size: 22px;
     }
   }
