--- a/client/src/components/Note/NewNote.module.scss
+++ b/client/src/components/Note/NewNote.module.scss
@@ -8,7 +8,7 @@
   box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
   color: rgb(80, 80, 80);
 
-  .groupName, .title, .content, .save {
+  .title, .content, .save {
     display: block;
     width: 100%;
     border: none;
@@ -16,12 +16,6 @@
     font-family: inherit;
     background-color: inherit;
     text-align: center;
-  }
-
-  .groupName {
-    border-radius: 4px 4px 0 0;
-    font-size: 16px;
-    text-align-last: center;
   }
 
   .title {
