--- a/client/src/containers/Auth/Auth.module.scss
+++ b/client/src/containers/Auth/Auth.module.scss
@@ -1,36 +1,64 @@
 .auth {
-    margin: 10vh auto;
-    width: 30vw;
-    height: 50vh;
-    max-width: 400px;
-    max-height: 400px;
+  z-index: 2;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  width: 30vw;
+  min-height: 40vh;
+  max-width: 400px;
+  max-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgb(250, 254, 247);
+  border-radius: 4px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
+  color: rgb(60, 60, 60);
+  animation: show 0.75s;
+
+  .title {
     display: flex;
-    flex-direction: column;
-    background-color: rgb(250, 254, 247);
-    border-radius: 4px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
-    color: rgb(60, 60, 60);
-    
-    .loginTitle {
-      margin-top: 25%;
+    justify-content: space-evenly;
+    text-align: center;
+    color: gray;
+
+    h1 {
+      font-weight: normal;
+      cursor: pointer;
+    }
+
+    .active {
+      color: rgb(60, 60 ,60);
+    }
+  }
+
+  form {
+    p {
+      margin-bottom: 10%;
       text-align: center;
     }
     
-    form {
+    input {
+      display: block;
+      margin: 1vh auto;
+      padding: 4px;
+      border: 1px solid rgb(200, 200, 200);
+      border-radius: 4px;
+    }
+
+    .submit {
       margin-top: 10%;
-      
-      input {
-        display: block;
-        margin: 10px auto;
-        padding: 4px;
-      }
-  
-      .submit {
-        margin-top: 10%;
-        padding: 10px;
-        background-color: white;
-        border: 1px solid rgb(200, 200, 200);
-        border-radius: 8px;
-      }
+      padding: 6px;
+      background-color: white;
+      border: 1px solid rgb(200, 200, 200);
+      border-radius: 8px;
     }
   }
+
+  @keyframes show {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+}
