--- a/client/src/components/Note/NewNote.module.scss
+++ b/client/src/components/Note/NewNote.module.scss
@@ -1,4 +1,5 @@
 .note {
+  position: relative;
   margin: 1vw 0;
   width: 20%;
   display: flex;
@@ -6,9 +7,30 @@
   background-color: rgb(250, 249, 244);
   border-radius: 4px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
-  color: rgb(80, 80, 80);
 
-  .title, .content, .save {
+  .colorPicker {
+    z-index: 2;
+    margin: 0 auto;
+    box-sizing: border-box;
+    animation: show 0.5s;
+
+    @keyframes show {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+  }
+
+  .colorPalette {
+    z-index: 1;
+    position: absolute;
+    top: 4px;
+    right: 5px;
+    width: 15px;
+    filter: invert(100%);
+    cursor: pointer;
+  }
+  
+  .category, .title, .content, .save {
     display: block;
     width: 100%;
     border: none;
@@ -16,6 +38,19 @@
     font-family: inherit;
     background-color: inherit;
     text-align: center;
+    color: inherit;
+  }
+
+  .category {
+    padding: 4px 0;
+    border-radius: 4px 4px 0 0;
+    font-size: 12px;
+    letter-spacing: 3px;
+    color: white;
+
+    &::placeholder {
+      color: white;
+    }
   }
 
   .title {
@@ -34,15 +69,17 @@
     white-space: pre;
     overflow: auto;
     text-align: left;
+    font-size: 16px;
   }
 
   .save {
-    min-height: 3vh;
+    min-height: 2vh;
     border-radius: 0 0 4px 4px;
     color: white;
     font-size: 18px;
     font-weight: bold;
     background-color: green;
+    cursor: pointer;
   }
 }
 
