--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -9,8 +9,17 @@
   background-color: rgb(250, 249, 244);
   border-radius: 4px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
-  color: rgb(80, 80, 80);
 
+  .category {
+    width: 100%;
+    padding: 2px 0;
+    border-radius: 4px 4px 0 0;
+    text-align: center;
+    font-size: 12px;
+    letter-spacing: 3px;
+    color: white;
+  }
+  
   .title {
     margin-top: 4%;
     margin-bottom: 0;
