--- a/client/src/containers/Auth/Auth.module.scss
+++ b/client/src/containers/Auth/Auth.module.scss
@@ -12,10 +12,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: rgb(250, 254, 247);
   border-radius: 4px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
-  color: rgb(60, 60, 60);
+  background-color: white;
   animation: show 0.75s;
 
   .title {
