--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -13,13 +13,11 @@
     position: fixed;
     top: 15px;
     right: 15px;
-    font-size: 18px;
-    color: rgb(100, 100, 100);
-    text-decoration: none;
+    width: 18px;
     cursor: pointer;
 
     &:hover {
-        font-weight: bold;
+        opacity: 0.5;
     }
 }
 
