--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -1,4 +1,5 @@
 .note {
+  position: relative;
   margin: 1vw;
   min-width: 15%;
   max-width: 30%;
@@ -41,19 +42,9 @@
   .date {
     padding: 1% 0;
     box-sizing: border-box;
-    border-top: 1px solid rgb(240, 240 ,240);
+    border-top: 1px solid rgb(242, 242 ,242);
     text-align: center;
-    color: rgb(180, 180 ,180);
-  }
-
-  a {
-    text-decoration: none;
-    color: inherit;
-
-    &:hover {
-      text-decoration: underline;
-      font-weight: bold;
-    }
+    color: rgb(200, 200 ,200);
   }
 }
 
