--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -1,23 +1,23 @@
 .navBar {
-    margin: 4vh auto;
+    margin: 1vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: flex-start;
 
     .name {
-        border-bottom: 1px solid rgb(230, 230 ,230);
+        margin-top: 5vh;
+        text-align: center;
         font-size: 32px;
     }
-}
 
-.login {
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    width: 18px;
-    cursor: pointer;
-
-    &:hover {
-        opacity: 0.5;
+    .login {
+        width: 26px;
+        color: inherit;
+        cursor: pointer;
+    
+        &:hover {
+            opacity: 0.5;
+        }
     }
 }
 
@@ -30,5 +30,9 @@
 @media (max-width: 480px) {
     .navBar {
         width: 90vw;
+
+        .login {
+            right: 4vh;
+        }
     }
 }
