--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -6,8 +6,8 @@
 
     .name {
         margin-top: 5vh;
-        text-align: center;
         font-size: 32px;
+        text-shadow: 1px 1px 2px rgb(128, 128, 128);
     }
 
     .login {
