--- a/client/src/components/Note/NewNote.module.scss
+++ b/client/src/components/Note/NewNote.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   background-color: rgb(250, 249, 244);
   border-radius: 4px;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
+  box-shadow: 0px 0px 6px 0px rgba(0, 0 ,0 , 0.25);
 
   .colorPicker {
     z-index: 2;
@@ -26,7 +26,6 @@
     top: 4px;
     right: 5px;
     width: 15px;
-    filter: invert(100%);
     cursor: pointer;
   }
   
@@ -54,10 +53,10 @@
   }
 
   .title {
-    margin: 2% 0;
-    padding: 0 4%;
+    margin: 0;
     box-sizing: border-box;
     font-size: 26px;
+    font-family: 'Gloria Hallelujah', cursive;
   }
 
   .content {
@@ -69,7 +68,8 @@
     white-space: pre;
     overflow: auto;
     text-align: left;
-    font-size: 16px;
+    font-size: 14px;
+    font-family: 'Gloria Hallelujah', cursive;
   }
 
   .save {
