--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0 ,0 , 0.25);
+  box-shadow: 0px 0px 6px 0px rgba(0, 0 ,0 , 0.25);
 
   .category {
     width: 100%;
@@ -21,29 +21,33 @@
   }
   
   .title {
-    margin-top: 4%;
-    margin-bottom: 0;
-    padding: 0 4%;
+    margin: 0;
     text-align: center;
     font-size: 26px;
     font-weight: normal;
     word-break: break-word;
+    font-family: 'Gloria Hallelujah', cursive;
   }
   
   .content {
     flex-grow: 1;
-    padding: 5%;
+    padding:  0 4% 4% 4%;
     box-sizing: border-box;
     white-space: pre;
     overflow: auto;
+    font-size: 14px;
+    font-family: 'Gloria Hallelujah', cursive;
   }
 
-  .date {
-    padding: 1% 0;
-    box-sizing: border-box;
-    border-top: 1px solid rgb(242, 242 ,242);
+  .date, .confirmMessage {
+    padding: 1.25% 0;
+    border-top: 0.5px solid rgba(160, 160 ,160, 0.25);
     text-align: center;
-    color: rgb(200, 200 ,200);
+    color: rgb(160, 160 ,160);
+  }
+
+  .confirmMessage {
+    color: inherit;
   }
 }
 
