--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -1,19 +1,21 @@
 .navBar {
-    margin: 1vw;
+    margin: 2vh auto;
+    width: 98vw;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 
     .name {
-        margin-top: 5vh;
+        margin-top: 4vh;
         font-size: 32px;
+        font-weight: normal;
         text-shadow: 1px 1px 2px rgb(128, 128, 128);
     }
 
     .login {
-        width: 26px;
         color: inherit;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
     
         &:hover {
             opacity: 0.5;
@@ -21,18 +23,12 @@
     }
 }
 
-@media (max-width: 768px) {
-    .navBar {
-        width: 60vw;
-    }
-}
-
 @media (max-width: 480px) {
     .navBar {
-        width: 90vw;
+        width: 92vw;
 
-        .login {
-            right: 4vh;
+        .name {
+            margin-top: 6vh;
         }
     }
 }
