--- a/client/src/components/Navigation/Theme.module.scss
+++ b/client/src/components/Navigation/Theme.module.scss
@@ -9,6 +9,7 @@
         border-radius: 2px;
         box-sizing: border-box;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
     }
 
     .light {
@@ -24,6 +25,6 @@
 
 @media (max-width: 480px) {
     .container {
-        width: 12vw;
+        width: 11vw;
     }
 }
