--- a/client/src/components/Note/Bar/Bar.module.scss
+++ b/client/src/components/Note/Bar/Bar.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 25px;
+    height: 21.5px;
     border-radius: 4px 4px 0 0;
     background-color: transparent;
     animation: show 0.5s;
@@ -35,7 +35,12 @@
 @media (max-width: 480px) {
     .bar {
         .edit, .delete, .confirm, .cancel {
-            top: 5%;
+            top: 17.5%;
+            -webkit-tap-highlight-color: transparent;
+
+            &:hover {
+                opacity: unset;
+            }
         }
     }
 }
