--- a/client/src/components/Note/NewNote.module.scss
+++ b/client/src/components/Note/NewNote.module.scss
@@ -27,6 +27,7 @@
     right: 5px;
     width: 15px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
   }
   
   .category, .title, .content, .save {
@@ -54,6 +55,7 @@
 
   .title {
     margin: 0;
+    padding: 0 5%;
     box-sizing: border-box;
     font-size: 26px;
     font-family: 'Gloria Hallelujah', cursive;
@@ -61,7 +63,7 @@
 
   .content {
     flex-basis: 100%;
-    padding: 0 1vw;
+    padding: 0 5%;
     padding-bottom: 20vh;
     box-sizing: border-box;
     resize: none;
@@ -73,11 +75,12 @@
   }
 
   .save {
+    margin: 0 auto;
+    width: 25%;
     min-height: 2vh;
-    border-radius: 0 0 4px 4px;
+    border-radius: 8px 8px 0 0;
     color: white;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 16px;
     background-color: green;
     cursor: pointer;
   }
