--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -22,6 +22,7 @@
   
   .title {
     margin: 0;
+    padding: 0 5%;
     text-align: center;
     font-size: 26px;
     font-weight: normal;
@@ -31,7 +32,7 @@
   
   .content {
     flex-grow: 1;
-    padding:  0 4% 4% 4%;
+    padding:  0 5% 5% 5%;
     box-sizing: border-box;
     white-space: pre;
     overflow: auto;
@@ -40,9 +41,10 @@
   }
 
   .date, .confirmMessage {
-    padding: 1.25% 0;
+    padding: 2.5px 0;
     border-top: 0.5px solid rgba(160, 160 ,160, 0.25);
     text-align: center;
+    font-size: 14px;
     color: rgb(160, 160 ,160);
   }
 
@@ -67,6 +69,10 @@
 
     .title {
       font-size: 22px;
+    }
+
+    .date, .confirmMessage {
+      font-size: 12px;
     }
   }
 }
