make newNote smaller on mobile

--- a/client/src/components/Note/NewNote.module.scss
+++ b/client/src/components/Note/NewNote.module.scss
@@ -97,9 +97,9 @@
   .note {
     margin: 2vh 0;
     width: 100%;
-  }
-
-  .title {
-    font-size: 22px;
+  
+    .content {
+      padding-bottom: 5vh;
+    }
   }
 }
