--- a/client/src/containers/Notes/Notes.module.scss
+++ b/client/src/containers/Notes/Notes.module.scss
@@ -11,6 +11,7 @@
 
     .categoryFilter {
         max-width: 40%;
+        outline: none;
         
         option {
             background-color: transparent;
