make newNote's content hidden when not hovered or focused

--- a/client/src/components/Navigation/Theme.module.scss
+++ b/client/src/components/Navigation/Theme.module.scss
@@ -23,6 +23,12 @@
     }
 }
 
+@media (max-width: 768px) {
+    .container {
+        width: 6vw;
+    }
+}
+
 @media (max-width: 480px) {
     .container {
         width: 11vw;
