--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -32,7 +32,7 @@
   
   .content {
     flex-grow: 1;
-    padding:  0 5% 5% 5%;
+    padding:  5%;
     box-sizing: border-box;
     white-space: pre;
     overflow: auto;
