--- a/client/src/containers/Auth/Auth.module.scss
+++ b/client/src/containers/Auth/Auth.module.scss
@@ -14,7 +14,6 @@
   justify-content: space-around;
   border-radius: 4px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
-  background-color: white;
   animation: show 0.75s;
 
   .title {
@@ -28,8 +27,14 @@
       cursor: pointer;
     }
 
-    .active {
-      color: rgb(60, 60 ,60);
+    .notActive {
+      opacity: 0.4;
+    }
+
+    .divider {
+      margin-top: 5%;
+      height: 50px;
+      border: 0.5px solid rgb(128, 128, 128);      
     }
   }
 
