--- a/client/src/containers/Notes/Notes.module.scss
+++ b/client/src/containers/Notes/Notes.module.scss
@@ -41,6 +41,12 @@
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    .filters {
+        width: 50vw;
+    }
+}
+
 @media (max-width: 480px) {
     .filters {
         width: 75vw;
