--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -15,6 +15,7 @@
     .login {
         color: inherit;
         cursor: pointer;
+        user-select: none;
         -webkit-tap-highlight-color: transparent;
     
         &:hover {
