--- a/client/src/components/Note/Note.module.scss
+++ b/client/src/components/Note/Note.module.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   border-radius: 4px;
   box-shadow: 0px 0px 6px 0px rgba(0, 0 ,0 , 0.25);
+  animation: show 0.5s;
 
   .category {
     width: 100%;
@@ -50,6 +51,11 @@
 
   .confirmMessage {
     color: inherit;
+  }
+
+  @keyframes show {
+    from { opacity: 0 }
+    to { opacity: 1 }
   }
 }
 
