--- a/client/src/containers/Auth/Auth.module.scss
+++ b/client/src/containers/Auth/Auth.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
   animation: show 0.75s;
 
@@ -38,46 +38,66 @@
     }
   }
 
-  form {
-    p {
-      margin-bottom: 10%;
-      text-align: center;
-    }
-    
-    input {
-      display: block;
-      margin: 1vh auto;
-      padding: 4px;
-      border: 1px solid rgb(200, 200, 200);
-      border-radius: 4px;
-    }
+  p {
+    margin-bottom: 10%;
+    text-align: center;
+  }
+  
+  input {
+    display: block;
+    margin: 1vh auto;
+    padding: 4px;
+    border: 1px solid rgb(200, 200, 200);
+    border-radius: 4px;
+  }
 
-    .login_register, .logout {
-      margin-top: 10%;
-      padding: 6px;
-      border-width: 1.5px;
-      border-radius: 8px;
-      background-color: transparent;
-      color: inherit;
-      outline: none;
-      cursor: pointer;
-      -webkit-tap-highlight-color: transparent;
+  .login_register, .update, .logout {
+    margin-top: 10%;
+    padding: 6px;
+    border-width: 1.5px;
+    border-radius: 8px;
+    background-color: transparent;
+    color: inherit;
+    outline: none;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
-      &:hover {
-        background-color: rgb(192, 192, 192);
-      }
+    &:hover {
+      background-color: rgb(192, 192, 192);
     }
   }
 
   .userLogo {
     margin: 0 auto;
-    width: 15%;
+    width: 20%;
     border-radius: 100%;
   }
   
   .greeting {
     text-align: center;
     font-size: 18px;
+    font-weight: normal;
+  }
+
+  .updateButton {
+    margin: 0 auto;
+    border: none;
+    font-size: 14px;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  .updateText {
+    color: #28a745;
+  }
+  
+  .errorMessage {
+    color: red;
   }
 
   @keyframes show {
