remove console logs

--- a/client/src/components/UI/Spinner.scss
+++ b/client/src/components/UI/Spinner.scss
@@ -1,8 +1,8 @@
 // Colors variables
-$primary: #4285F47F; // blue
-$success: #34A8537F; // green
-$danger: #EA43357F; // red
-$warning: #FBBC057F; // yellow
+$primary: #4285F4; // blue
+$success: #34A853; // green
+$danger: #EA4335; // red
+$warning: #FBBC05; // yellow
 
 // Container and shapes dimentions
 $containerDimentions: 60px;
