--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -5,11 +5,12 @@
     justify-content: space-between;
     align-items: flex-start;
 
-    .name {
-        margin-top: 4vh;
-        font-size: 32px;
+    .title {
+        margin: 4vh 0 2vh 0;
+        font-size: 60px;
         font-weight: normal;
         text-shadow: 1px 1px 2px rgb(128, 128, 128);
+        font-family: 'Tangerine', cursive;
     }
 
     .login {
@@ -28,7 +29,7 @@
     .navBar {
         width: 92vw;
 
-        .name {
+        .title {
             margin-top: 6vh;
         }
     }
