--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -55,11 +55,10 @@
   }
 
   .title {
-    margin-bottom: 5%;
+    margin: 2.5% 0;
     padding: 0 5%;
     box-sizing: border-box;
     font-size: 26px;
-    font-family: 'Gloria Hallelujah', cursive;
   }
 
   .content {
@@ -70,8 +69,7 @@
     white-space: pre;
     overflow: auto;
     text-align: left;
-    font-size: 14px;
-    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 16px;
     animation: showContent 0.25s;
 
     @keyframes showContent {
