--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -9,7 +9,7 @@
         margin: 4vh 0 2vh 0;
         font-size: 60px;
         font-weight: normal;
-        text-shadow: 1px 1px 2px rgb(128, 128, 128);
+        text-shadow: 1px 1px 0 lightblue;
         font-family: 'Tangerine', cursive;
     }
 
