fix textarea's cursor direction and add title logo

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,4 +5,10 @@ html {
 body {
     margin: 0;
     color: rgb(80, 80, 80);
+    animation: showApp 1s;
+
+    @keyframes showApp {
+        from {opacity: 0;}
+        to {opacity: 1};
+    }
 }
