--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -68,7 +68,7 @@
     resize: none;
     white-space: pre;
     overflow: auto;
-    text-align: left;
+    text-align: unset;
     font-size: 16px;
     animation: showContent 0.25s;
 
