replace app.get(*) with app.use() to catch all requests

--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -6,8 +6,8 @@
     align-items: flex-start;
 
     .title {
-        width: 20vw;
-        margin: 4vh 0 2vh 0;
+        width: 15vw;
+        margin: 2vh 0;
     }
 
     .login {
