--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -14,6 +14,7 @@
   justify-content: space-around;
   border-radius: 8px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
+  background-color: white;
   animation: show 0.75s;
 
   .title {
@@ -101,6 +102,10 @@
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
   }
+
+  .showNewPasswordDark {
+    color: white;
+  }
   
   .errorMessage {
     color: red;
@@ -109,6 +114,15 @@
   @keyframes show {
     from {opacity: 0;}
     to {opacity: 1;}
+  }
+}
+
+.authDark {
+  color: white;
+  background-color: rgb(32, 32 ,32);
+
+  .userLogoDark {
+    filter: invert(100%);
   }
 }
 
