--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -7,18 +7,24 @@
   max-height: 35vh;
   display: flex;
   flex-direction: column;
-  border-radius: 4px;
-  box-shadow: 0px 0px 6px 0px rgba(0, 0 ,0 , 0.25);
+  border-radius: 2px;
+  box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
   animation: show 0.5s;
 
   .category {
+    position: absolute;
+    top: 2.5px;
     width: 100%;
-    padding: 2px 0;
-    border-radius: 4px 4px 0 0;
     text-align: center;
     font-size: 12px;
     letter-spacing: 3px;
     color: white;
+  }
+
+  .categoryBackground {
+    width: 100%;
+    padding: 2px 0;
+    filter: blur(4px);
   }
   
   .title {
@@ -83,5 +89,13 @@
     .date, .confirmMessage {
       font-size: 12px;
     }
+  }
+}
+
+.noteDark {
+  color: white;
+
+  .dateDark {
+    color: rgb(200, 200, 200);
   }
 }
