--- a/client/src/components/Notes/Notes.module.scss
+++ b/client/src/components/Notes/Notes.module.scss
@@ -7,6 +7,7 @@
     .categoryFilter, .searchFilter {
         border: 0.5px solid #ccc;
         border-radius: 5px;
+        background-color: white;
     }
 
     .categoryFilter {
@@ -27,6 +28,28 @@
             border: none;
             background-color: transparent;
             outline: none;
+        }
+    }
+}
+
+.filtersDark {
+    color: white;
+
+    .categoryFilterDark {
+        color: white;
+        background-color: #262626;
+    }
+
+    .searchFilterDark {
+        caret-color: white;
+        background-color: #262626;
+
+        .searchBox {
+            color: white;
+
+            &::placeholder {
+                color: rgb(200, 200, 200);
+            }
         }
     }
 }
