--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -13,7 +13,7 @@
 
   .category {
     position: absolute;
-    top: 2.5px;
+    top: 4px;
     width: 100%;
     text-align: center;
     font-size: 12px;
@@ -22,9 +22,9 @@
   }
 
   .categoryBackground {
-    width: 100%;
-    padding: 2px 0;
-    filter: blur(4px);
+    width: 98%;
+    margin: 4px auto 0 auto;
+    filter: blur(3px);
   }
   
   .title {
@@ -64,6 +64,14 @@
   }
 }
 
+.noteDark {
+  color: white;
+
+  .dateDark {
+    color: rgb(180, 180, 180);
+  }
+}
+
 @media (max-width: 768px) {
   .note {
     margin: 4vw;
@@ -89,13 +97,5 @@
     .date, .confirmMessage {
       font-size: 12px;
     }
-  }
-}
-
-.noteDark {
-  color: white;
-
-  .dateDark {
-    color: rgb(200, 200, 200);
   }
 }
