--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -1,9 +1,9 @@
 .note {
   position: relative;
   margin: 1vw;
-  min-width: 15%;
-  max-width: 30%;
-  min-height: 20vh;
+  min-width: 15vw;
+  max-width: 30vw;
+  min-height: 15vh;
   max-height: 35vh;
   display: flex;
   flex-direction: column;
@@ -37,8 +37,9 @@
   }
   
   .content {
+    position: relative;
     flex-grow: 1;
-    margin: 2% 4% 0 4%;
+    margin: 2% 4% 1% 4%;
     white-space: pre;
     overflow: auto;
     font-size: 16px;
@@ -54,9 +55,22 @@
     }
   }
 
+  .paperClip {
+    z-index: 1;
+    position: absolute;
+    bottom: 6px;
+    right: 6px;
+    width: 16px;
+    opacity: 0.4;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.25;
+    }
+  }
+
   .date, .confirmMessage {
     padding: 2.5px 0;
-    border-top: 0.5px solid rgba(160, 160 ,160, 0.25);
     text-align: center;
     font-size: 14px;
     color: rgb(160, 160 ,160);
@@ -74,6 +88,10 @@
 
 .noteDark {
   color: white;
+  
+  .paperClipDark {
+    filter: invert(100%);
+  }
 }
 
 @media (max-width: 768px) {
