further enhance the file download and upload process and show spinner while file is downloading

--- a/client/src/components/UI/FileSpinner.module.scss
+++ b/client/src/components/UI/FileSpinner.module.scss
@@ -1,10 +1,10 @@
-.spinner {
-  z-index: 2;
+.FileSpinner {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 150px;
-  height: 150px;
+  bottom: 2.5%;
+  right: 2.5%;
+  transform: translate(-50%, -50%);
+  width: 15px;
+  height: 15px;
   border-top: 3px solid rgba(dodgerblue, 0.5);
   border-right: 3px solid transparent;
   border-radius: 50%;
@@ -13,9 +13,9 @@
 
 @keyframes rotation {
   from {
-    transform: translate(-50%, -50%) rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-    transform: translate(-50%, -50%) rotate(360deg);
+    transform: rotate(360deg);
   }
 }
