--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -3,8 +3,8 @@
   margin: 1vw;
   min-width: 15vw;
   max-width: 30vw;
-  min-height: 15vh;
-  max-height: 35vh;
+  min-height: 17.5vh;
+  max-height: 30vh;
   display: flex;
   flex-direction: column;
   border-radius: 2px;
@@ -55,18 +55,22 @@
     }
   }
 
-  .paperClip, .download {
+  .file, .download {
     z-index: 1;
     position: absolute;
     bottom: 6px;
     right: 6px;
     width: 16px;
-    opacity: 0.4;
+    opacity: 0.5;
     cursor: pointer;
 
     &:hover {
-      opacity: 0.25;
+      opacity: 1;
     }
+  }
+
+  .file {
+    width: 13px;
   }
 
   .date, .confirmMessage {
@@ -89,7 +93,7 @@
 .noteDark {
   color: white;
   
-  .paperClipDark {
+  .fileDark {
     filter: invert(100%);
   }
 }
