--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -113,6 +113,7 @@
     font-size: 16px;
     background-color: green;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     &:hover {
       background-color: rgb(44, 179, 44);
