--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -113,7 +113,7 @@
     margin: 2vh 0;
     width: 100%;
     max-width: none;
-    min-height: 0;
+    min-height: 20vh;
     max-height: 50vh;
 
     .title {
