--- a/client/src/components/Navigation/Theme.module.scss
+++ b/client/src/components/Navigation/Theme.module.scss
@@ -1,5 +1,9 @@
 .symbol {
     cursor: pointer;
+
+    &:hover {
+        opacity: 0.5;
+    }
 }
 
 .sun {
@@ -7,7 +11,5 @@
 }
 
 .moon {
-    margin-top: 2px;
-    margin-left: 2px;
     width: 20px;
 }
