--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -1,21 +1,16 @@
 .auth {
-  z-index: 2;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: auto;
   width: 30vw;
-  min-height: 40vh;
-  max-width: 400px;
-  max-height: 400px;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  border-radius: 8px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0 ,0 , 0.25);
-  background-color: white;
-  animation: show 0.75s;
+  border-radius: 2px;
+  box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
 
   .title {
     display: flex;
@@ -52,7 +47,7 @@
     border-radius: 4px;
   }
 
-  .login_register, .update, .logout {
+  .login_register {
     margin-top: 10%;
     padding: 6px;
     border-width: 1.5px;
@@ -67,63 +62,20 @@
       background-color: rgb(192, 192, 192);
     }
   }
-
-  .userLogo {
-    margin: 0 auto;
-    width: 20%;
-    border-radius: 100%;
-  }
   
   .greeting {
     text-align: center;
     font-size: 18px;
     font-weight: normal;
   }
-
-  .updateButton {
-    display: block;
-    margin: 0 auto;
-    border: none;
-    font-size: 14px;
-    color: gray;
-    background-color: transparent;
-    cursor: pointer;
-
-    &:hover {
-      opacity: 0.5;
-    }
-  }
-
-  .showNewPassword {
-    width: 100%;
-    border: none;
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  .showNewPasswordDark {
-    color: white;
-  }
   
   .errorMessage {
     color: red;
-  }
-
-  @keyframes show {
-    from {opacity: 0;}
-    to {opacity: 1;}
   }
 }
 
 .authDark {
   color: white;
-  background-color: rgb(32, 32 ,32);
-
-  .userLogoDark {
-    filter: invert(100%);
-  }
 }
 
 @media (max-width: 480px) {
