--- a/client/src/components/Navigation/CookiesMessage.scss
+++ b/client/src/components/Navigation/CookiesMessage.scss
@@ -4,6 +4,7 @@
     bottom: 2%;
     left: 25vw;
     width: 45vw;
+    margin: 0 auto;
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 0 0 4px gray;
