--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -1,27 +1,34 @@
 .navBar {
     display: flex;
     margin: 0 auto;
-    padding: 2px 10px;
+    padding: 0 10px;
     width: 100%;
     box-sizing: border-box;
     justify-content: space-between;
     align-items: flex-start;
-    box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.2) inset;
+    box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.4);
 
-    .login {
-        margin-left: 10px;
+    .theme, .notes, .auth {
+        padding: 6px;
         color: inherit;
+        text-decoration: none;
+        font-size: 18px;
+        opacity: 0.66;
         cursor: pointer;
-    
+
         &:hover {
-            opacity: 0.5;
+            opacity: 1;
         }
+    }
+
+    .active {
+        opacity: 1;
+        box-shadow: 0 0 4px gray inset;
     }
 }
 
 .navBarDark {
-    .loginDark {
-        color: black;
-        filter: invert(100%);
+    .themeDark, .notesDark, .authDark {
+        color: white;
     }
 }
