fix critical bug that occured when no local notes existed

--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -1,6 +1,7 @@
 .navBar {
     display: flex;
     margin: 0 auto;
+    margin-bottom: 5vh;
     padding: 0 10px;
     width: 100%;
     box-sizing: border-box;
@@ -12,7 +13,7 @@
         padding: 6px;
         color: inherit;
         text-decoration: none;
-        font-size: 18px;
+        font-size: 20px;
         opacity: 0.66;
         cursor: pointer;
 
