refactor NewNote and add notes image to README file

--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -24,6 +24,8 @@
 
     .theme { 
         padding: 0;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
 
         .icon {
             width: 22px;
