--- a/client/src/components/Notes/Notes.module.scss
+++ b/client/src/components/Notes/Notes.module.scss
@@ -35,15 +35,12 @@
 .filtersDark {
     color: white;
 
-    .categoryFilterDark {
+    .categoryFilterDark, .searchFilterDark {
         color: white;
-        background-color: #262626;
+        background-color: #222;
     }
 
     .searchFilterDark {
-        caret-color: white;
-        background-color: #262626;
-
         .searchBox {
             color: white;
 
