--- a/client/src/components/Auth/User.module.scss
+++ b/client/src/components/Auth/User.module.scss
@@ -11,7 +11,22 @@
     justify-content: space-around;
     border-radius: 2px;
     box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
+    animation: show 1s;
     
+    .userLogo {
+      margin: 10px auto;
+      width: 20%;
+      border-radius: 100%;
+    }
+
+    .name {
+      padding-left: 20px;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 20px;
+      font-weight: normal;
+    }
+
     input {
       display: block;
       margin: 1vh auto;
@@ -35,18 +50,11 @@
         background-color: rgb(192, 192, 192);
       }
     }
-  
-    .userLogo {
-      margin: 10px auto;
-      width: 20%;
-      border-radius: 100%;
-    }
     
     .info {
-      padding-left: 10%;
-    
       h1 {
         margin: 6px;
+        padding-left: 10%;
         font-size: 20px;
         font-weight: normal;
       }
@@ -83,6 +91,11 @@
     .errorMessage {
       text-align: center;
       color: red;
+    }
+
+    @keyframes show {
+      from { opacity: 0 }
+      to { opacity: 1 }
     }
   }
   
